<?xml version="1.0"?>
<!--
  æ–‡ä»¶å: package.xml
  åŠŸèƒ½æè¿°: unitree_controller ROSåŒ…çš„å…ƒæ•°æ®å’Œä¾èµ–å£°æ˜Žæ–‡ä»¶
  
  ä¸»è¦ä½œç”¨:
  -1. å®šä¹‰ROSåŒ…çš„åŸºæœ¬ä¿¡æ¯(åç§°ã€ç‰ˆæœ¬ã€æè¿°ã€ç»´æŠ¤è€…ç­‰)
  0. å£°æ˜Žç¼–è¯‘å’Œè¿è¡Œæ—¶ä¾èµ–çš„å…¶ä»–ROSåŒ…
  1. é…ç½®åŒ…çš„å¯¼å‡ºä¿¡æ¯å’Œæ’ä»¶è·¯å¾„
  2. ä¸ºcatkinæž„å»ºç³»ç»Ÿæä¾›å¿…è¦çš„å…ƒæ•°æ®
  
  åœ¨æ•´ä¸ªé¡¹ç›®ä¸­çš„ä½œç”¨:
  - ðŸ”´ æ ¸å¿ƒé…ç½®æ–‡ä»¶ - catkinæž„å»ºç³»ç»Ÿçš„é‡è¦è¾“å…¥
  - ä¾èµ–ç®¡ç† - ç¡®ä¿æ‰€éœ€çš„ROSåŒ…è¢«æ­£ç¡®å®‰è£…å’Œé“¾æŽ¥
  - åŒ…ä¿¡æ¯å±•ç¤º - åœ¨ROSç”Ÿæ€ç³»ç»Ÿä¸­æ ‡è¯†å’Œæè¿°æ­¤åŒ…
  
  é‡è¦æ€§:
  - æ²¡æœ‰æ­£ç¡®çš„package.xmlæ–‡ä»¶ï¼ŒROSåŒ…æ— æ³•è¢«catkinæ­£ç¡®è¯†åˆ«å’Œæž„å»º
  - ä¾èµ–å£°æ˜Žé”™è¯¯ä¼šå¯¼è‡´ç¼–è¯‘å¤±è´¥æˆ–è¿è¡Œæ—¶é”™è¯¯
  - æ˜¯ROSåŒ…åˆ†å‘å’Œå…±äº«çš„æ ‡å‡†æ ¼å¼
-->
<!-- 
  ROSåŒ…æ¸…å•æ–‡ä»¶
  æ ¼å¼ç‰ˆæœ¬: 2 (æ”¯æŒæ¡ä»¶ä¾èµ–å’Œæ›´ä¸°å¯Œçš„å…ƒæ•°æ®)
-->
<package format="2">
    
    <!-- ==================== åŸºæœ¬åŒ…ä¿¡æ¯ ==================== -->
    
    <!--
      åŒ…åç§°: unitree_controller
      
      ä½œç”¨: å®šä¹‰æ­¤ROSåŒ…çš„å”¯ä¸€æ ‡è¯†ç¬¦
      é‡è¦æ€§: 
      - ç”¨äºŽcatkinå·¥ä½œç©ºé—´ä¸­çš„åŒ…è¯†åˆ«
      - å…¶ä»–åŒ…é€šè¿‡æ­¤åç§°å¼•ç”¨æœ¬åŒ…
      - å¿…é¡»ä¸Žæ–‡ä»¶å¤¹åç§°ä¸€è‡´
    -->
    <name>unitree_controller</name>
    
    <!--
      ç‰ˆæœ¬å·: 0.0.0
      
      æ ¼å¼: major.minor.patch (è¯­ä¹‰åŒ–ç‰ˆæœ¬æŽ§åˆ¶)
      å½“å‰çŠ¶æ€: å¼€å‘ç‰ˆæœ¬ï¼Œå°šæœªæ­£å¼å‘å¸ƒ
      
      ç‰ˆæœ¬å«ä¹‰:
      - major: ä¸»ç‰ˆæœ¬å·ï¼Œä¸å…¼å®¹çš„APIå˜æ›´æ—¶é€’å¢ž
      - minor: æ¬¡ç‰ˆæœ¬å·ï¼Œå‘åŽå…¼å®¹çš„åŠŸèƒ½å¢žåŠ æ—¶é€’å¢ž  
      - patch: ä¿®è®¢å·ï¼Œå‘åŽå…¼å®¹çš„bugä¿®å¤æ—¶é€’å¢ž
    -->
    <version>0.0.0</version>
    
    <!--
      åŒ…æè¿°: ç®€è¦è¯´æ˜ŽåŒ…çš„åŠŸèƒ½
      
      ä½œç”¨: ä¸ºç”¨æˆ·å’Œå¼€å‘è€…æä¾›åŒ…åŠŸèƒ½çš„æ¦‚è§ˆ
      å†…å®¹: è¯´æ˜Žè¿™æ˜¯Unitreeæœºå™¨äººçš„æŽ§åˆ¶å™¨åŒ…
    -->
    <description>The unitree_controller package.</description>

    <!-- ==================== ç»´æŠ¤è€…ä¿¡æ¯ ==================== -->
    
    <!--
      ç»´æŠ¤è€…ä¿¡æ¯
      
      email: ç»´æŠ¤è€…çš„è”ç³»é‚®ç®±
      ä½œç”¨: æä¾›æŠ€æœ¯æ”¯æŒå’ŒbugæŠ¥å‘Šçš„è”ç³»æ–¹å¼
      é‡è¦æ€§: å¸®åŠ©ç”¨æˆ·åœ¨é‡åˆ°é—®é¢˜æ—¶æ‰¾åˆ°ç›¸åº”çš„æŠ€æœ¯æ”¯æŒ
    -->
    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    
    <!--
      è®¸å¯è¯ä¿¡æ¯
      
      å½“å‰çŠ¶æ€: TODO (å¾…å®š)
      å»ºè®®: åº”è¯¥æ˜Žç¡®æŒ‡å®šå¼€æºè®¸å¯è¯ï¼Œå¦‚MITã€Apache-2.0ã€GPLç­‰
      é‡è¦æ€§: æ˜Žç¡®ä»£ç çš„ä½¿ç”¨å’Œåˆ†å‘æ¡æ¬¾
    -->
    <license>TODO</license>

    <!-- ==================== æž„å»ºå·¥å…·ä¾èµ– ==================== -->
    
    <!--
      catkin: ROSçš„å®˜æ–¹æž„å»ºç³»ç»Ÿ
      
      ä½œç”¨: 
      - æä¾›CMakeçš„æ‰©å±•å’Œå®
      - å¤„ç†ROSåŒ…ä¹‹é—´çš„ä¾èµ–å…³ç³»
      - ç”Ÿæˆå¿…è¦çš„é…ç½®æ–‡ä»¶
      
      ä¾èµ–ç±»åž‹: buildtool_depend (æž„å»ºå·¥å…·ä¾èµ–)
      å¿…è¦æ€§: æ‰€æœ‰ROSåŒ…éƒ½éœ€è¦æ­¤ä¾èµ–
    -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!--
      genmsg: ROSæ¶ˆæ¯ç”Ÿæˆå·¥å…·
      
      ä½œç”¨: å¤„ç†è‡ªå®šä¹‰æ¶ˆæ¯ç±»åž‹çš„ç”Ÿæˆ
      è™½ç„¶æœ¬åŒ…ä¸»è¦ä½¿ç”¨çŽ°æœ‰æ¶ˆæ¯ç±»åž‹ï¼Œä½†ä»å£°æ˜Žæ­¤ä¾èµ–ä»¥ç¡®ä¿å…¼å®¹æ€§
    -->
    <buildtool_depend>genmsg</buildtool_depend>

    <!-- ==================== ç¼–è¯‘æ—¶ä¾èµ– ==================== -->
    
    <!--
      controller_manager: ROSæŽ§åˆ¶å™¨ç®¡ç†å™¨
      
      ä½œç”¨: 
      - æä¾›æŽ§åˆ¶å™¨çš„åŠ è½½ã€å¯åŠ¨ã€åœæ­¢ç­‰ç®¡ç†åŠŸèƒ½
      - ä¸ºGazeboä»¿çœŸä¸­çš„å…³èŠ‚æŽ§åˆ¶å™¨æä¾›æ¡†æž¶æ”¯æŒ
      
      åœ¨æœ¬åŒ…ä¸­çš„ç”¨é€”: ç®¡ç†æœºå™¨äººå…³èŠ‚æŽ§åˆ¶å™¨çš„ç”Ÿå‘½å‘¨æœŸ
    -->
    <build_depend>controller_manager</build_depend>
    
    <!--
      joint_state_controller: å…³èŠ‚çŠ¶æ€æŽ§åˆ¶å™¨
      
      ä½œç”¨:
      - å‘å¸ƒæœºå™¨äººæ‰€æœ‰å…³èŠ‚çš„çŠ¶æ€ä¿¡æ¯
      - ä¸ºrobot_state_publisheræä¾›å…³èŠ‚æ•°æ®
      
      åœ¨æœ¬åŒ…ä¸­çš„ç”¨é€”: èŽ·å–å’Œå‘å¸ƒ12ä¸ªå…³èŠ‚çš„ä½ç½®ã€é€Ÿåº¦ã€åŠ›çŸ©ä¿¡æ¯
    -->
    <build_depend>joint_state_controller</build_depend>
    
    <!--
      robot_state_publisher: æœºå™¨äººçŠ¶æ€å‘å¸ƒå™¨
      
      ä½œç”¨:
      - åŸºäºŽURDFæ¨¡åž‹å’Œå…³èŠ‚çŠ¶æ€è®¡ç®—å¹¶å‘å¸ƒTFå˜æ¢
      - ä¸ºrvizç­‰å¯è§†åŒ–å·¥å…·æä¾›æœºå™¨äººæ¨¡åž‹ä¿¡æ¯
      
      åœ¨æœ¬åŒ…ä¸­çš„ç”¨é€”: å‘å¸ƒæœºå™¨äººå„éƒ¨ä»¶ä¹‹é—´çš„åæ ‡å˜æ¢å…³ç³»
    -->
    <build_depend>robot_state_publisher</build_depend>
    
    <!--
      roscpp: ROSçš„C++å®¢æˆ·ç«¯åº“
      
      ä½œç”¨:
      - æä¾›C++ç‰ˆæœ¬çš„ROS API
      - åŒ…å«èŠ‚ç‚¹ã€å‘å¸ƒå™¨ã€è®¢é˜…å™¨ã€æœåŠ¡ç­‰æ ¸å¿ƒåŠŸèƒ½
      
      åœ¨æœ¬åŒ…ä¸­çš„ç”¨é€”: æœ¬åŒ…çš„æ‰€æœ‰C++ä»£ç éƒ½ä¾èµ–æ­¤åº“
      é‡è¦æ€§: ðŸ”´ æ ¸å¿ƒä¾èµ–ï¼Œæ‰€æœ‰C++èŠ‚ç‚¹å¿…éœ€
    -->
    <build_depend>roscpp</build_depend>
    
    <!--
      std_msgs: ROSæ ‡å‡†æ¶ˆæ¯ç±»åž‹
      
      ä½œç”¨: æä¾›åŸºç¡€æ¶ˆæ¯ç±»åž‹å¦‚Bool, Int32, Float64, Stringç­‰
      åœ¨æœ¬åŒ…ä¸­çš„ç”¨é€”: ä½¿ç”¨Boolæ¶ˆæ¯è¿›è¡ŒçŠ¶æ€æ ‡è¯†
    -->
    <build_depend>std_msgs</build_depend>

    <!-- ==================== å¯¼å‡ºä¾èµ– ==================== -->
    <!-- 
      build_export_depend: å…¶ä»–åŒ…ä¾èµ–æœ¬åŒ…æ—¶éœ€è¦çš„ç¼–è¯‘ä¾èµ–
      è¿™äº›ä¾èµ–ä¼šä¼ é€’ç»™ä¾èµ–æœ¬åŒ…çš„å…¶ä»–åŒ…
    -->
    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>joint_state_controller</build_export_depend>
    <build_export_depend>robot_state_publisher</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <!-- ==================== è¿è¡Œæ—¶ä¾èµ– ==================== -->
    <!--
      exec_depend: è¿è¡Œæ—¶ä¾èµ–
      è¿™äº›åŒ…åœ¨è¿è¡Œæœ¬åŒ…çš„èŠ‚ç‚¹æ—¶å¿…é¡»å­˜åœ¨
    -->
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    
    <!--
      unitree_legged_msgs: Unitreeè…¿å¼æœºå™¨äººæ¶ˆæ¯åŒ…
      
      ä½œç”¨: 
      - ðŸ”´ æ ¸å¿ƒä¾èµ– - å®šä¹‰æœºå™¨äººä¸“ç”¨çš„æ¶ˆæ¯ç±»åž‹
      - åŒ…å«MotorCmd, MotorState, LowCmd, LowStateç­‰å…³é”®æ¶ˆæ¯
      
      ä¾èµ–ç±»åž‹: depend (ç¼–è¯‘å’Œè¿è¡Œæ—¶éƒ½éœ€è¦)
      é‡è¦æ€§: 
      - æœ¬åŒ…çš„æ ¸å¿ƒåŠŸèƒ½å®Œå…¨ä¾èµ–è¿™äº›æ¶ˆæ¯ç±»åž‹
      - å¦‚æžœæ­¤åŒ…ä¸å¯ç”¨ï¼Œunitree_controlleræ— æ³•æ­£å¸¸å·¥ä½œ
      
      æ¶ˆæ¯ç±»åž‹:
      - MotorCmd: å•ä¸ªç”µæœºæŽ§åˆ¶å‘½ä»¤
      - MotorState: å•ä¸ªç”µæœºçŠ¶æ€åé¦ˆ  
      - LowCmd: åº•å±‚æŽ§åˆ¶å‘½ä»¤(åŒ…å«12ä¸ªå…³èŠ‚)
      - LowState: åº•å±‚çŠ¶æ€åé¦ˆ(åŒ…å«12ä¸ªå…³èŠ‚+IMU+è¶³ç«¯åŠ›)
      - HighCmd/HighState: é«˜å±‚æŽ§åˆ¶å‘½ä»¤å’ŒçŠ¶æ€
      - IMU: æƒ¯æ€§æµ‹é‡å•å…ƒæ•°æ®
      - BmsCmd/BmsState: ç”µæ± ç®¡ç†ç³»ç»Ÿ
    -->
    <depend>unitree_legged_msgs</depend>

    <!-- ==================== å¯¼å‡ºé…ç½® ==================== -->
    
    <!--
      exportæ ‡ç­¾: åŒ…çš„å¯¼å‡ºé…ç½®
      
      ä½œç”¨: å£°æ˜Žæœ¬åŒ…æä¾›çš„é¢å¤–åŠŸèƒ½å’Œèµ„æº
      å½“å‰çŠ¶æ€: å·²æ³¨é‡Šï¼Œè¡¨ç¤ºæš‚æ—¶ä¸å¯¼å‡ºç‰¹æ®Šé…ç½®
      
      å¦‚æžœå¯ç”¨ï¼Œå¯èƒ½åŒ…å«:
      - gazebo_rosæ’ä»¶è·¯å¾„
      - rvizæ’ä»¶
      - nodeletsç­‰
    -->
    <export>
        <!-- 
          å…¶ä»–å·¥å…·å¯ä»¥åœ¨è¿™é‡Œè¯·æ±‚æ”¾ç½®é¢å¤–ä¿¡æ¯
          
          gazebo_rosé…ç½®ç¤ºä¾‹:
          å®šä¹‰Gazeboæ’ä»¶çš„æœç´¢è·¯å¾„å’Œåª’ä½“æ–‡ä»¶è·¯å¾„
          
          <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
          
          è¯´æ˜Ž:
          - plugin_path: Gazeboæ’ä»¶åº“æ–‡ä»¶çš„æœç´¢è·¯å¾„
          - gazebo_media_path: Gazeboåª’ä½“æ–‡ä»¶(æ¨¡åž‹ã€æè´¨ç­‰)çš„è·¯å¾„
          - ${prefix}: æŒ‡å‘åŒ…çš„å®‰è£…è·¯å¾„
          
          å½“å‰çŠ¶æ€: å·²æ³¨é‡Šï¼Œå› ä¸ºunitree_controllerä¸ç›´æŽ¥æä¾›Gazeboæ’ä»¶
          å®žé™…çš„Gazeboæ’ä»¶åœ¨unitree_gazeboåŒ…ä¸­å®žçŽ°
        -->
        <!-- <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/> -->
    </export>
    
</package>